# progge.rs

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  example.progge  runtime.c
analyzer-examples/: analyze_expression.progge  analyze_loop.progge  array.progge  array_numerical.progge  elina_segfault.progge  numerical.progge  scopes.progge  symex_arr.progge  symex_arr.rs  symex_arr_hard.progge  symex_blackbox.progge  symex_gcd.progge  symex_multiple_calls.progge  testcase_unknown.progge  testcase_unreachable.progge  testcases.progge  unreachable.progge  unreachable_loop.progge
analyzer-examples/fun/: fox_chicken_corn.progge  super_auto_pets.progge
analyzer-examples/tc_bad/: argument_count_mismatch.progge  argument_type_mismatch.progge  array_element_type_mismatch.progge  array_size_type_mismatch.progge  assigned_before_def.progge  assignment_type_mismatch.progge  condition_type_mismatch.progge  duplicate_formal_parameter.progge  duplicate_function_names.progge  empty_explicit_array.progge  function_may_not_return.progge  index_assignment_type_mismatch.progge  index_into_non_array.progge  index_type_mismatch.progge  non_unit_call_statement.progge  operator_type_mismatch.progge  return_type_mismatch.progge  unit_call_expression.progge  use_before_def.progge
codegen-examples/: array.progge  factorial.progge  simple.progge
src/: ai.rs  ana.rs  assign_liveness.rs  ast.rs  compiler.rs  constprop.rs  dfa.rs  ir.rs  lib.rs  liveness.rs  opt.rs  progge.lalrpop  progge.rs  se.rs  tc.rs
