[package]
name = "proggers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proggers"
path = "src/progge.rs"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
#elina = { path = "../elina-rs" }
elina = { git = "https://github.com/skius/elina-rs" }
lalrpop-util = { version = "0.19.6", features = ["lexer", "regex"] }
regex = "1"
petgraph = "0.6.0"
ariadne = "0.1.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
lazy_static = "1.4.0"
z3 = "0.11.2"
egg = "0.6.0"